objects/DMAPP__DM_User_Role_Extra__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Depth__c</fullName>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Lineage__c</fullName>
        <label>Lineage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__UserRoleId__c</fullName>
        <label>UserRoleId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DM User Role Extra</label>
    <nameField>
        <label>DM User Role Extra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM User Role Extras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>